add lenis scroll

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <!-- @@header -->
 
     <!-- @main -->
-    <main class="homepage">
+    <main class="homepage" data-page="home">
         <!-- fv// -->
         <section class="fv" data-fv>
             <div class="fv_container">
