refactor fv & about

--- a/index.html
+++ b/index.html
@@ -472,41 +472,44 @@
         <!-- about// -->
         <section class="about">
             <div class="about_container">
-                <a href="/about/" class="about_thumb about_thumb_bigger" data-fadein>
-                    <picture class="c-picture">
-                        <source media="(max-width: 1023px)" data-srcset="/assets/images/home/about_thumb_sp.webp">
-                        <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb.webp" alt="園について"
-                            width="1380" height="680">
-                    </picture>
-                    <div class="about_heading about_thumb_heading">
-                        <svg width="58.049" height="28.996">
-                            <use xlink:href="#leaf-icon" />
-                        </svg>
-                        <h2>園について</h2>
-                    </div>
-                    <div class="about_thumb_content">
-                        <div class="about_thumb_desc">
-                            <p>
-                                城山みどり こども園は、<br />
-                                幼稚園と保育園の機能を兼ね備えた <br />
-                                0歳から通える「認定こども園」です。
-                            </p>
-                        </div>
-                        <div class="about_btn about_thumb_btn">
-                            <svg width="20" height="12">
-                                <use xlink:href="#arrow-icon" />
+                <div data-fadein>
+                    <a href="/about/" class="about_thumb about_thumb_bigger">
+                        <picture class="c-picture">
+                            <source media="(max-width: 1023px)" data-srcset="/assets/images/home/about_thumb_sp.webp">
+                            <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb_pc.webp" alt="園について"
+                                width="1380" height="680">
+                        </picture>
+                        <div class="about_heading about_thumb_heading">
+                            <svg width="58.049" height="28.996">
+                                <use xlink:href="#leaf-icon" />
                             </svg>
+                            <h2>園について</h2>
                         </div>
-                    </div>
-                </a>
-                <div class="about_swiper" data-about-swiper>
+                        <div class="about_thumb_content">
+                            <div class="about_thumb_desc">
+                                <p>
+                                    城山みどり こども園は、<br />
+                                    幼稚園と保育園の機能を兼ね備えた <br />
+                                    0歳から通える「認定こども園」です。
+                                </p>
+                            </div>
+                            <div class="about_btn about_thumb_btn">
+                                <svg width="20" height="12">
+                                    <use xlink:href="#arrow-icon" />
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div></div>
+                <div class="about_swiper" data-fadein data-about-swiper>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a href="/education/" class="about_items">
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
-                                        data-srcset="/assets/images/home/about_thumb_sp.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb.webp"
+                                        data-srcset="/assets/images/home/about_slide_01.webp">
+                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_01.webp"
                                         alt="まなび" width="1380" height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
@@ -540,8 +543,8 @@
                             <a href="/daily-life/" class="about_items">
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
-                                        data-srcset="/assets/images/home/about_thumb_sp.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb.webp"
+                                        data-srcset="/assets/images/home/about_slide_02.webp">
+                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_02.webp"
                                         alt="園の生活" width="1380" height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
@@ -575,8 +578,8 @@
                             <a href="/" class="about_items">
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
-                                        data-srcset="/assets/images/home/about_thumb_sp.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb.webp"
+                                        data-srcset="/assets/images/home/about_slide_03.webp">
+                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_03.webp"
                                         alt="職員のこと" width="1380" height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
@@ -610,8 +613,8 @@
                             <a href="/" class="about_items">
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
-                                        data-srcset="/assets/images/home/about_thumb_sp.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb.webp"
+                                        data-srcset="/assets/images/home/about_slide_04.webp">
+                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_04.webp"
                                         alt="子育てサポト" width="1380" height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
