coding home page done :fire:

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- @@loading -->
 
     <!-- @reservation -->
-    <a href="/admission/tour/" class="c-reservation">
+    <a href="/admission/tour/" class="c-reservation" data-reservation>
         <div class="c-reservation_container">
             <h2>園見学の<br class="sp-only" />ご案内</h2>
             <div class="arrow">
@@ -476,8 +476,8 @@
                     <a href="/about/" class="about_thumb about_thumb_bigger">
                         <picture class="c-picture">
                             <source media="(max-width: 1023px)" data-srcset="/assets/images/home/about_thumb_sp.webp">
-                            <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb_pc.webp" alt="園について"
-                                width="1380" height="680">
+                            <img class="lazy" draggable="false" data-src="/assets/images/home/about_thumb_pc.webp"
+                                alt="園について" width="1380" height="680">
                         </picture>
                         <div class="about_heading about_thumb_heading">
                             <svg width="58.049" height="28.996">
@@ -509,8 +509,9 @@
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
                                         data-srcset="/assets/images/home/about_slide_01.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_01.webp"
-                                        alt="まなび" width="1380" height="680">
+                                    <img class="lazy" draggable="false"
+                                        data-src="/assets/images/home/about_slide_01.webp" alt="まなび" width="1380"
+                                        height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
                                             <use xlink:href="#arrow-icon" />
@@ -544,8 +545,9 @@
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
                                         data-srcset="/assets/images/home/about_slide_02.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_02.webp"
-                                        alt="園の生活" width="1380" height="680">
+                                    <img class="lazy" draggable="false"
+                                        data-src="/assets/images/home/about_slide_02.webp" alt="園の生活" width="1380"
+                                        height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
                                             <use xlink:href="#arrow-icon" />
@@ -579,8 +581,9 @@
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
                                         data-srcset="/assets/images/home/about_slide_03.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_03.webp"
-                                        alt="職員のこと" width="1380" height="680">
+                                    <img class="lazy" draggable="false"
+                                        data-src="/assets/images/home/about_slide_03.webp" alt="職員のこと" width="1380"
+                                        height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
                                             <use xlink:href="#arrow-icon" />
@@ -614,8 +617,9 @@
                                 <picture class="c-picture">
                                     <source media="(max-width: 1023px)"
                                         data-srcset="/assets/images/home/about_slide_04.webp">
-                                    <img class="lazy" draggable="false" data-src="/assets/images/home/about_slide_04.webp"
-                                        alt="子育てサポト" width="1380" height="680">
+                                    <img class="lazy" draggable="false"
+                                        data-src="/assets/images/home/about_slide_04.webp" alt="子育てサポト" width="1380"
+                                        height="680">
                                     <div class="about_btn">
                                         <svg width="20" height="12">
                                             <use xlink:href="#arrow-icon" />
@@ -664,12 +668,192 @@
             </div>
         </section>
         <!-- //about -->
+
+        <!-- admission// -->
+        <section class="admission">
+            <div class="admission_container u-padd">
+                <div class="c-heading" data-fadein>
+                    <svg width="58.049" height="28.996">
+                        <use xlink:href="#leaf-icon" />
+                    </svg>
+                    <h2>入園をお考えの方へ</h2>
+                </div>
+                <div class="admission_list">
+                    <div class="admission_items" data-fadein>
+                        <a href="/admission/">
+                            <picture class="c-picture">
+                                <source media="(max-width: 1023px)" data-srcset="/assets/images/home/admission_01.webp">
+                                <img class="lazy" data-src="/assets/images/home/admission_01.webp" alt="入園のご案内"
+                                    draggable="false" width="280" height="280">
+                            </picture>
+                            <p>入園のご案内</p>
+                        </a>
+                    </div>
+                    <div class="admission_items" data-fadein>
+                        <a href="/admission/tour/">
+                            <picture class="c-picture">
+                                <source media="(max-width: 1023px)" data-srcset="/assets/images/home/admission_02.webp">
+                                <img class="lazy" data-src="/assets/images/home/admission_02.webp" alt="園見学について"
+                                    draggable="false" width="280" height="280">
+                            </picture>
+                            <p>園見学について</p>
+                        </a>
+                    </div>
+                    <div class="admission_items" data-fadein>
+                        <a href="/admission/faq/">
+                            <picture class="c-picture">
+                                <source media="(max-width: 1023px)" data-srcset="/assets/images/home/admission_03.webp">
+                                <img class="lazy" data-src="/assets/images/home/admission_03.webp" alt="よくあるご質問"
+                                    draggable="false" width="280" height="280">
+                            </picture>
+                            <p>よくあるご質問</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //admission -->
+
+        <!-- bnr// -->
+        <section class="c-bnr">
+            <div class="c-bnr_container">
+                <div class="c-bnr_about" data-fadein>
+                    <a href="/">
+                        <picture class="c-picture">
+                            <source media="(max-width: 1023px)" data-srcset="/assets/images/placeholder.webp">
+                            <img class="lazy" data-src="/assets/images/placeholder.webp" alt="療育クラスについて (仮)"
+                                draggable="false" width="1360" height="365">
+                        </picture>
+                        <div class="c-bnr_about_content">
+                            <div class="c-heading">
+                                <svg width="58.049" height="28.996">
+                                    <use xlink:href="#leaf-icon" />
+                                </svg>
+                                <h2>療育クラスについて (仮)</h2>
+                            </div>
+                            <p>準備中</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="c-bnr_contact" data-fadein>
+                    <div class="c-picture"></div>
+                    <div class="c-bnr_contact_inner">
+                        <div class="c-bnr_contact_left">
+                            <div class="c-heading">
+                                <svg width="58.049" height="28.996">
+                                    <use xlink:href="#leaf-icon" />
+                                </svg>
+                                <h2>お問い合わせ</h2>
+                            </div>
+                        </div>
+                        <div class="c-bnr_contact_right">
+                            <a href="tel:0339664646">
+                                <p>電話 (03-3966-4646 / 9:00-16:30)</p>
+                                <svg class="phone" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24">
+                                    <path id="phone"
+                                        d="M6.4,16.4C8,18,8,19.6,9.6,19.6s3.2-1.6,4.8-3.2,3.2-3.2,3.2-4.8S16,10,14.4,8.4,17.6,2,19.2,2,24,6.8,24,6.8c0,3.2-3.287,9.687-6.4,12.8S8,26,4.8,26c0,0-4.8-3.2-4.8-4.8S4.8,14.8,6.4,16.4Z"
+                                        transform="translate(0 -2)" fill="#559c21" opacity="0.6" />
+                                </svg>
+                            </a>
+                            <a href="/contact/">
+                                <p>お問い合わせフォーム</p>
+                                <svg class="mail" xmlns="http://www.w3.org/2000/svg" width="32.789" height="18.044"
+                                    viewBox="0 0 32.789 18.044">
+                                    <g id="Group_99" data-name="Group 99" transform="translate(-580.034 -5685.021)"
+                                        opacity="0.7">
+                                        <rect id="Rectangle_49" data-name="Rectangle 49" width="24.413" height="18.045"
+                                            rx="3" transform="translate(584.222 5685.021)" fill="#7db254" />
+                                        <path id="Path_39" data-name="Path 39" d="M0,0,15.024,8.918"
+                                            transform="translate(581.405 5687.039)" fill="none" stroke="#fff"
+                                            stroke-linecap="round" stroke-width="2" />
+                                        <path id="Path_38" data-name="Path 38" d="M15.024,0,0,8.918"
+                                            transform="translate(596.429 5687.039)" fill="none" stroke="#fff"
+                                            stroke-linecap="round" stroke-width="2" />
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //bnr -->
     </main>
     <!-- @@main -->
 
     <!-- @footer -->
-    <footer class="c-footer" style="height: 200vh;">
-        <div class="c-footer_container"></div>
+    <footer class="c-footer" data-footer>
+        <div class="c-footer_container">
+            <div class="c-footer_left">
+                <div class="sp-only">
+                    <div class="c-footer_back" data-backtotop>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18.414" height="10.829"
+                            viewBox="0 0 18.414 10.829">
+                            <g id="btn" transform="translate(-854 -2366.586)">
+                                <g id="Group_650" data-name="Group 650" transform="translate(-352 1267)">
+                                    <g id="Group_624" data-name="Group 624" transform="translate(0 -1)">
+                                        <line id="Line_53" data-name="Line 53" x2="16" transform="translate(1207 1106)"
+                                            fill="none" stroke="#559c21" stroke-linecap="round" stroke-width="2" />
+                                        <line id="Line_54" data-name="Line 54" x2="4" y2="4"
+                                            transform="translate(1219 1102)" fill="none" stroke="#559c21"
+                                            stroke-linecap="round" stroke-width="2" />
+                                        <line id="Line_55" data-name="Line 55" x1="4" y2="4"
+                                            transform="translate(1219 1106)" fill="none" stroke="#559c21"
+                                            stroke-linecap="round" stroke-width="2" />
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                </div>
+                <div class="c-footer_contact">
+                    <p>城山みどり こども園</p>
+                    <p>〒174&#8203;-0043 東京都板橋区坂下2-22-10</p>
+                    <p>TEL：03-3966-4646</p>
+                </div>
+                <div class="c-footer_link">
+                    <a href="/access/">
+                        <p>アクセス</p>
+                    </a>
+                    <a href="/about/#info">
+                        <p>園の概要</p>
+                    </a>
+                </div>
+            </div>
+            <div class="c-footer_center">
+                <svg id="Group_192" data-name="Group 192" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" width="131.509" height="80" viewBox="0 0 131.509 80">
+                    <defs>
+                        <clipPath id="clip-path-footer-logo">
+                            <rect id="Rectangle_76" data-name="Rectangle 76" width="131.509" height="80" />
+                        </clipPath>
+                    </defs>
+                    <g id="Group_191" data-name="Group 191" clip-path="url(#clip-path-footer-logo)">
+                        <path id="Path_65" data-name="Path 65"
+                            d="M34.766,34.432c3.034,28.162,5.9,40.909,8.6,45.568H0c2.7-4.659,5.567-17.406,8.6-45.568C11.431,8.167,7.534,1.447,6.111,0H37.257c-1.422,1.447-5.321,8.167-2.491,34.432M81.327,0H50.181C51.6,1.447,55.5,8.167,52.672,34.432c-3.035,28.162-5.9,40.909-8.6,45.568H87.438c-2.7-4.659-5.567-17.406-8.6-45.568C76.006,8.167,79.9,1.447,81.327,0m41.58,34.432C120.077,8.167,123.976,1.447,125.4,0H94.251c1.423,1.447,5.321,8.167,2.491,34.432C93.708,62.594,90.84,75.341,88.14,80h43.369c-2.7-4.659-5.568-17.406-8.6-45.568" />
+                    </g>
+                </svg>
+                <p>©︎ 2025 ISHIKAWA KINDER GAKUEN</p>
+            </div>
+            <div class="c-footer_right pc-only">
+                <div class="c-footer_back" data-backtotop>
+                    <p>トップに戻る</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14.828" height="22.414" viewBox="0 0 14.828 22.414">
+                        <g id="Group_674" data-name="Group 674" transform="translate(-1097.586 1224.414) rotate(-90)">
+                            <g id="Group_624" data-name="Group 624" transform="translate(0 -1)">
+                                <line id="Line_53" data-name="Line 53" x2="20" transform="translate(1203 1106)"
+                                    fill="none" stroke="#559c21" stroke-linecap="round" stroke-width="2" />
+                                <line id="Line_54" data-name="Line 54" x2="6" y2="6" transform="translate(1217 1100)"
+                                    fill="none" stroke="#559c21" stroke-linecap="round" stroke-width="2" />
+                                <line id="Line_55" data-name="Line 55" x1="6" y2="6" transform="translate(1217 1106)"
+                                    fill="none" stroke="#559c21" stroke-linecap="round" stroke-width="2" />
+                            </g>
+                        </g>
+                    </svg>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- @@footer -->
 
