udpate scroll header shrink homepage & another

--- a/about/index.html
+++ b/about/index.html
@@ -311,17 +311,9 @@
     <!-- // -->
 
     <!-- @main -->
-    <main class="errorpage">
-        <!-- notfound// -->
-        <section class="notfound">
-            <div class="notfound_container">
-                <h2 class="notfound_heading">404</h2>
-                <div class="notfound_sub">
-                    <h3>This page could not be found.</h3>
-                </div>
-            </div>
-        </section>
-        <!-- //notfound -->
+    <main class="aboutpage">
+        <!-- about// -->
+        <!-- //about -->
     </main>
     <!-- @@main -->
 
