--- a/about/ishikawa-kinder-gakuen/index.html
+++ b/about/ishikawa-kinder-gakuen/index.html
@@ -74,7 +74,7 @@
         })(document);
     </script>
 
-    <title>SHIROYAMA MIDORI</title>
+    <title>ISHIKAWA KINDER GAKUEN | ABOUT | SHIROYAMA MIDORI</title>
 </head>
 
 <body class="fadeout">
@@ -311,17 +311,66 @@
     <!-- // -->
 
     <!-- @main -->
-    <main class="errorpage">
-        <!-- notfound// -->
-        <section class="notfound">
-            <div class="notfound_container">
-                <h2 class="notfound_heading">404</h2>
-                <div class="notfound_sub">
-                    <h3>This page could not be found.</h3>
+    <main class="aboutpage">
+        <!-- ishikawa// -->
+        <section class="about ishikawa">
+            <div class="ishikawa_container">
+                <div class="c-tit">
+                    <div class="c-tit_heading c-heading" data-fadein>
+                        <svg width="58.049" height="28.996">
+                            <use xlink:href="#leaf-icon" />
+                        </svg>
+                        <h2>石川キンダー学園について</h2>
+                    </div>
+                    <div class="c-tit_thumb ishikawa_thumb" data-fadein>
+                        <picture class="c-tit_thumb_main c-picture">
+                            <source media="(max-width: 1023px)" data-srcset="/assets/images/about/about_thumb_sp.webp">
+                            <img class="lazy" data-src="/assets/images/about/about_thumb_pc.webp" alt="石川キンダー学園について"
+                                draggable="false" width="1360" height="680">
+                        </picture>
+                        <div class="c-tit_thumb_logo ishikawa_thumb_logo">
+                            <picture>
+                                <source media="(max-width: 1023px)"
+                                    data-srcset="/assets/images/about/about_thumb_logo.webp">
+                                <img class="lazy" data-src="/assets/images/about/about_thumb_logo.webp"
+                                    alt="石川キンダー学園について" draggable="false" width="230" height="220">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+                <div class="ishikawa_inner u-padd">
+                    <div class="ishikawa_basic">
+                        <div class="ishikawa_basic_thumb" data-fadein>
+                            <picture class="c-picture">
+                                <source media="(max-width: 1023px)" data-srcset="/assets/images/placeholder.webp">
+                                <img class="lazy" data-src="/assets/images/placeholder.webp" alt="こころのきほんからだとくらし"
+                                    draggable="false" width="940" height="627">
+                            </picture>
+                            <div class="txt">
+                                <h3>
+                                    からだとくらし、<br />
+                                    こころのきほん。
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="ishikawa_content" data-fadein>
+                            <p>
+                                石川キンダー学園は「城山幼稚園」 「鎮守の森 城山どんぐり保育園」 「城山みどり こども園」
+                                の3園を運営する学校法人です。終戦後の1949年(昭和24年)、城山熊野神社の宮司であった石川文吉が地域の教育を通して日本の未来へ貢献したいという想いから「城山幼稚園」を創立。今のこどもに必要な教育理論と保護者のニーズ、変わりゆく制度にきめ細かく応えながら、よりよい教育と保育の実現を目指しています。
+                            </p>
+                        </div>
+                        <div class="ishikawa_basic_trees" data-fadein>
+                            <picture class="c-picture">
+                                <source media="(max-width: 1023px)" data-srcset="/assets/images/about/ishikawa_trees.webp">
+                                <img class="lazy" data-src="/assets/images/about/ishikawa_trees.webp" alt="こころのきほんからだとくらし"
+                                    draggable="false" width="940" height="773">
+                            </picture>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- //notfound -->
+        <!-- //ishikawa -->
     </main>
     <!-- @@main -->
 
