--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
     <!-- @@reservation -->
 
     <!-- @header -->
-    <header class="c-header">
+    <header class="c-header" data-header-homepage data-header-shrink>
         <div class="c-header_container">
             <div class="c-header_left">
                 <h1>
-                    <a href="/" aria-label="SHIROYAMA MIDORI" class="c-header_logo js-logo" data-header-logo>
+                    <a href="/" aria-label="SHIROYAMA MIDORI" class="c-header_logo" data-header-logo>
                         <svg id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             width="160" height="225" viewBox="0 0 160 225">
                             <defs>
