coding about ishikawa done

--- a/404.html
+++ b/404.html
@@ -353,7 +353,7 @@
                 <div class="c-footer_contact">
                     <p>城山みどり こども園</p>
                     <p>〒174&#8203;-0043 東京都板橋区坂下2-22-10</p>
-                    <p>TEL：03-3966-4646</p>
+                    <p>TEL：&#8203;03-3966-4646</p>
                 </div>
                 <div class="c-footer_link">
                     <a href="/access/">
