--- a/about/index.html
+++ b/about/index.html
@@ -74,11 +74,11 @@
         })(document);
     </script>
 
-    <title>SHIROYAMA MIDORI</title>
+    <title>ABOUT | SHIROYAMA MIDORI</title>
 </head>
 
 <body class="fadeout">
-    <!-- @reservation -->
+    <!-- @reservation -->   
     <a href="/admission/tour/" class="c-reservation" data-reservation>
         <div class="c-reservation_container">
             <h2>園見学の<br class="sp-only" />ご案内</h2>
@@ -313,7 +313,76 @@
     <!-- @main -->
     <main class="aboutpage">
         <!-- about// -->
+        <section class="about">
+            <div class="about_container"></div>
+        </section>
         <!-- //about -->
+
+        <!-- bnr// -->
+        <section class="c-bnr">
+            <div class="c-bnr_container">
+                <div class="c-bnr_about" data-fadein>
+                    <a href="/">
+                        <picture class="c-picture">
+                            <source media="(max-width: 1023px)" data-srcset="/assets/images/placeholder.webp">
+                            <img class="lazy" data-src="/assets/images/placeholder.webp" alt="療育クラスについて (仮)"
+                                draggable="false" width="1360" height="365">
+                        </picture>
+                        <div class="c-bnr_about_content">
+                            <div class="c-heading">
+                                <svg width="58.049" height="28.996">
+                                    <use xlink:href="#leaf-icon" />
+                                </svg>
+                                <h2>療育クラスについて (仮)</h2>
+                            </div>
+                            <p>準備中</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="c-bnr_contact" data-fadein>
+                    <div class="c-picture"></div>
+                    <div class="c-bnr_contact_inner">
+                        <div class="c-bnr_contact_left">
+                            <div class="c-heading">
+                                <svg width="58.049" height="28.996">
+                                    <use xlink:href="#leaf-icon" />
+                                </svg>
+                                <h2>お問い合わせ</h2>
+                            </div>
+                        </div>
+                        <div class="c-bnr_contact_right">
+                            <a href="tel:0339664646">
+                                <p>電話 (03-3966-4646 / 9:00-16:30)</p>
+                                <svg class="phone" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24">
+                                    <path id="phone"
+                                        d="M6.4,16.4C8,18,8,19.6,9.6,19.6s3.2-1.6,4.8-3.2,3.2-3.2,3.2-4.8S16,10,14.4,8.4,17.6,2,19.2,2,24,6.8,24,6.8c0,3.2-3.287,9.687-6.4,12.8S8,26,4.8,26c0,0-4.8-3.2-4.8-4.8S4.8,14.8,6.4,16.4Z"
+                                        transform="translate(0 -2)" fill="#559c21" opacity="0.6" />
+                                </svg>
+                            </a>
+                            <a href="/contact/">
+                                <p>お問い合わせフォーム</p>
+                                <svg class="mail" xmlns="http://www.w3.org/2000/svg" width="32.789" height="18.044"
+                                    viewBox="0 0 32.789 18.044">
+                                    <g id="Group_99" data-name="Group 99" transform="translate(-580.034 -5685.021)"
+                                        opacity="0.7">
+                                        <rect id="Rectangle_49" data-name="Rectangle 49" width="24.413" height="18.045"
+                                            rx="3" transform="translate(584.222 5685.021)" fill="#7db254" />
+                                        <path id="Path_39" data-name="Path 39" d="M0,0,15.024,8.918"
+                                            transform="translate(581.405 5687.039)" fill="none" stroke="#fff"
+                                            stroke-linecap="round" stroke-width="2" />
+                                        <path id="Path_38" data-name="Path 38" d="M15.024,0,0,8.918"
+                                            transform="translate(596.429 5687.039)" fill="none" stroke="#fff"
+                                            stroke-linecap="round" stroke-width="2" />
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //bnr -->
     </main>
     <!-- @@main -->
 
@@ -345,7 +414,7 @@
                 <div class="c-footer_contact">
                     <p>城山みどり こども園</p>
                     <p>〒174&#8203;-0043 東京都板橋区坂下2-22-10</p>
-                    <p>TEL：03-3966-4646</p>
+                    <p>TEL：&#8203;03-3966-4646</p>
                 </div>
                 <div class="c-footer_link">
                     <a href="/access/">
