--- a/about/ishikawa-kinder-gakuen/index.html
+++ b/about/ishikawa-kinder-gakuen/index.html
@@ -556,7 +556,7 @@
                                 </div>
                                 <a href="https://shiroyama.work/" target="_blank" rel="noopener noreferrer">
                                     <p>石川キンダー学園 採用情報</p>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="15.294"
+                                    <svg class="window" xmlns="http://www.w3.org/2000/svg" width="20" height="15.294"
                                         viewBox="0 0 20 15.294">
                                         <g id="Group_125" data-name="Group 125" transform="translate(-626 -5692)">
                                             <g id="Rectangle_46" data-name="Rectangle 46"
