--- a/about/index.html
+++ b/about/index.html
@@ -78,7 +78,7 @@
 </head>
 
 <body class="fadeout">
-    <!-- @reservation -->   
+    <!-- @reservation -->
     <a href="/admission/tour/" class="c-reservation" data-reservation>
         <div class="c-reservation_container">
             <h2>園見学の<br class="sp-only" />ご案内</h2>
@@ -314,7 +314,133 @@
     <main class="aboutpage">
         <!-- about// -->
         <section class="about">
-            <div class="about_container"></div>
+            <div class="about_container">
+                <div class="c-tit">
+                    <div class="c-tit_heading c-heading" data-fadein>
+                        <svg width="58.049" height="28.996">
+                            <use xlink:href="#leaf-icon" />
+                        </svg>
+                        <h2>城山みどり こども園について</h2>
+                    </div>
+                    <div class="c-tit_thumb ishikawa_thumb" data-fadein>
+                        <picture class="c-tit_thumb_main c-picture">
+                            <source media="(max-width: 1023px)"
+                                data-srcset="/assets/images/about/about_thumb_sp.webp">
+                            <img class="lazy" data-src="/assets/images/about/about_thumb_pc.webp" alt="城山みどり こども園について"
+                                draggable="false" width="1360" height="680">
+                        </picture>
+                    </div>
+                </div>
+                <div class="u-padd">
+                    <div class="about_info">
+                        <div class="about_title --center" data-fadein>
+                            <h3>基本情報</h3>
+                            <span></span>
+                        </div>
+                        <div class="about_table" data-fadein>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <p>名称</p>
+                                        </td>
+                                        <td>
+                                            <p>認定こども園　城山みどり こども園</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p>所在地</p>
+                                        </td>
+                                        <td>
+                                            <p>〒174-0043 東京都板橋区坂下2-22-10</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p>TEL / FAX</p>
+                                        </td>
+                                        <td>
+                                            <p>03-3966-4646&#8203; / &#8203;03-3966-4646</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p>園長</p>
+                                        </td>
+                                        <td>
+                                            <p>石川典子</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p>定員</p>
+                                        </td>
+                                        <td>
+                                            <p>245名（幼稚園枠・保育園枠合計）</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p>受け入れ年齢</p>
+                                        </td>
+                                        <td>
+                                            <p>【幼稚園枠】 2〜5歳　/ 【保育園枠】 0〜5歳</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p>登園 / 降園時間</p>
+                                        </td>
+                                        <td>
+                                            <p>【幼稚園枠】 8:50（早朝保育あり）〜 14:00　/　*水曜日は13:30（放課後保育あり）</p>
+                                            <p>【保育園枠】 8:00（早朝保育あり）〜 19:00</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p>沿革</p>
+                                        </td>
+                                        <td>
+                                            <p>
+                                                昭和24年（1949年）、戦後の日本の未来をこどもに託すため「城山熊野神社」の宮司
+                                                石川文吉により城山熊野神社の境内に「城山幼稚園」が創設される。昭和26年（1951年）に地域の要望によりこれが増設され「城山みどり
+                                                こども園」の前身となる「城山第二幼稚園」が誕生。平成3年（1991年）に運営母体となる「学校法人石川キンダー学園」が設立され「城山みどり幼稚園」へ改称。令和8年（2026年）
+                                                、よりよい幼児教育を多くのこどもに提供するため「城山みどり こども園」として認定こども園に。
+                                            </p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="about_bnr" data-fadein>
+                            <div class="about_bnr_left">
+                                <picture class="c-picture">
+                                    <source media="(max-width: 1023px)"
+                                        data-srcset="/assets/images/about/about_info.webp">
+                                    <img class="lazy" data-src="/assets/images/about/about_info.webp"
+                                        alt="学校法人 石川キンダー学園について" draggable="false" width="285" height="285">
+                                </picture>
+                            </div>
+                            <div class="about_bnr_right">
+                                <h3>学校法人 石川キンダー学園について</h3>
+                                <div class="about_bnr_content">
+                                    <p>
+                                        平成3年（1991年）設立。板橋区で「城山幼稚園」「城山みどり こども園」「鎮守の森
+                                        城山どんぐり保育園」の3園を運営。伝統を大切にした教育と時代に即した学びのプログラム、保護者への充実したサポートサービスで、地域の幼児教育に貢献しています。
+                                    </p>
+                                </div>
+                                <a href="/about/ishikawa-kinder-gakuen/">
+                                    <p>石川キンダー学園について</p>
+                                    <svg width="20" height="12">
+                                        <use xlink:href="#arrow-icon" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- //about -->
 
