update margin/padding layout

--- a/about/ishikawa-kinder-gakuen/index.html
+++ b/about/ishikawa-kinder-gakuen/index.html
@@ -427,6 +427,8 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="ishikawa_inner">
                         <div class="ishikawa_feature --reverse">
                             <div class="ishikawa_feature_left">
                                 <div class="about_title sp-only" data-fadein>
