create layout contact&admisison

--- a/daily-life/index.html
+++ b/daily-life/index.html
@@ -323,7 +323,7 @@
                         <h2>園の生活</h2>
                     </div>
                     <div class="c-firstview_thumb" data-fadein>
-                        <picture class="c-firstview_thumb_main c-picture">
+                        <picture class="c-firstview_thumb_main --overlay c-picture">
                             <source media="(max-width: 1023px)" data-srcset="/assets/images/daily/daily_thumb_sp.webp">
                             <img class="lazy" data-src="/assets/images/daily/daily_thumb_pc.webp" alt="園の生活"
                                 draggable="false" width="1360" height="680">
