--- a/about/ishikawa-kinder-gakuen/index.html
+++ b/about/ishikawa-kinder-gakuen/index.html
@@ -323,7 +323,7 @@
                         <h2>石川キンダー学園について</h2>
                     </div>
                     <div class="c-firstview_thumb ishikawa_thumb" data-fadein>
-                        <picture class="c-firstview_thumb_main c-picture">
+                        <picture class="c-firstview_thumb_main --overlay c-picture">
                             <source media="(max-width: 1023px)"
                                 data-srcset="/assets/images/about/about_ish_thumb_sp.webp">
                             <img class="lazy" data-src="/assets/images/about/about_ish_thumb_pc.webp" alt="石川キンダー学園について"
