--- a/education/index.html
+++ b/education/index.html
@@ -323,7 +323,7 @@
                         <h2>まなび</h2>
                     </div>
                     <div class="c-firstview_thumb" data-fadein>
-                        <picture class="c-firstview_thumb_main c-picture">
+                        <picture class="c-firstview_thumb_main --overlay c-picture">
                             <source media="(max-width: 1023px)"
                                 data-srcset="/assets/images/education/education_thumb_sp.webp">
                             <img class="lazy" data-src="/assets/images/education/education_thumb_pc.webp" alt="まなび"
