coding admission tour page done :fire:

--- a/about/index.html
+++ b/about/index.html
@@ -525,7 +525,7 @@
                     </div>
                 </div>
                 <div class="u-padd">
-                    <div class="about_info">
+                    <div class="about_info" id="info">
                         <div class="c-title --center" data-fadein>
                             <h3>基本情報</h3>
                             <span></span>
