--- a/admission/index.html
+++ b/admission/index.html
@@ -326,7 +326,7 @@
                         <picture class="c-firstview_thumb_main c-picture">
                             <source media="(max-width: 1023px)"
                                 data-srcset="/assets/images/admission/admission_thumb_sp.webp">
-                            <img class="lazy" data-src="/assets/images/admission/admission_thumb_pc.webp" alt="職員のこと"
+                            <img class="lazy" data-src="/assets/images/admission/admission_thumb_pc.webp" alt="入園のご案内"
                                 draggable="false" width="1360" height="680">
                         </picture>
                     </div>
@@ -346,9 +346,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="admission_apply" data-fadein>
+                    <div class="admission_apply_inner">
+                        <div class="c-title --center">
+                            <h3>未就園児 / 小学生向け</h3>
+                            <span></span>
+                        </div>
+                        <div class="admission_apply_content" >
+                            <p>
+                                テキストが入りますテキストが入りますテキストが入りますテキストが入ります
+                                テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
+                                テキストが入りますテキストが入ります（100字程度）
+                            </p>
+                        </div>
+                        <div class="admission_apply_btn">
+                            <a href="/contact/">
+                                <p>お申し込み</p>
+                                <div class="arrow">
+                                    <svg width="20" height="12">
+                                        <use xlink:href="#arrow-icon"></use>
+                                    </svg>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-        <!-- //teacher -->
+        <!-- //admission -->
 
         <!-- bnr// -->
         <section class="c-bnr">
